test/e2e/testdata/templates/deprecated-httproute-annotations/module/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: e2e-deprecated-httproute-annotations
  namespace: e2e-deprecated-httproute-annotations
  annotations:
    alb.network.deckhouse.io/response-headers-to-add: '{"Strict-Transport-Security":"max-age=31536000; includeSubDomains"}'
spec:
  hostnames:
    - e2e.example.com
  rules:
    - backendRefs:
        - name: e2e
          port: 80
